<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<!-- activity_splash.xml -->
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/accsplash"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/green_dark"
    android:padding="32dp">

    <!-- Logo Icon -->
    <FrameLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bg_button_primary">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="25dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img" />
</androidx.cardview.widget.CardView>
    </FrameLayout>

    <!-- App Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:letterSpacing="-0.03" />

    <!-- Tagline -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tagline"
        android:textColor="@color/white_60"
        android:textSize="12sp"
        android:letterSpacing="0.15"
        android:textAllCaps="true" />

    <!-- Get Started Button -->
    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:paddingStart="48dp"
        android:paddingTop="16dp"
        android:paddingEnd="48dp"
        android:paddingBottom="16dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/premium_silver">


            <LinearLayout
                android:layout_width="169dp"
                android:layout_height="170dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="50dp">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:background="@drawable/roundedcorners"
                        app:srcCompat="@drawable/humanialogo" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
>>>>>>> 329a5679b4cde414db467d46aa983b1f078148d7
